# mosc-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dump.txt
example/: helloWorl.msc  promise.msc  socketSimpleClient.msc  socketSimpleServer.msc  uvsocketSimpleClient.msc  uvsocketSimpleServer.msc
helpers/: cify_cli_mosc.py
src/cli/: cli.c  cli.h  cli.msc  cli_helper.h  cli_source.inc  main.c  native_library.h  packages.c  packages.h  path.c  path.h  path.msc  path_type.msc  resolver.c  resolver.h  resolver.msc  runtime.c  runtime.h  stat.h
suppl_packages/: filen.msc
